    - Disabled health regen for all units. Turrets and spawners are not units and not affected.
    - Add 1.25x to max health for units to balance the health regen when race level > 1.
    - construction & logistic robots immune fire when player defence enhance option is on.
    - change how spawn chance are calculated for flying units squad


---------------------------------------------------------------------------------------------------
Version: 1.6.0
Date: 2021-08-12

  Features:
    - Compatibility for New Game Plus.
    - When the game resets, attack meter also reset.
    - When "reset evolution factor" is checked, level, tier and evolution points are preserved. Evolution factor and attack meter get reset.
    - When "reset research" is checked, everything reset.
    - Add "level up accelerator" option to accelerate level up by killing unit and turrets. It defaults to ON.
    - The point is based on 1% of spawner destroy factor for each killed units and 10% of spawner destroy factor for each killed turrets
    - level 10+ should play with "level up accelerator" enabled.

  Changes:
    - New experience curve for Level 4 - 20.
    - Evolution points: 12, 25, 45, 70, 115, 175, 250, 350, 450, 600, 750, 900, 1200, 1600, 2200, 3000, 4000
    - New XP curve takes less evolution points to reach level 10 and takes more evolution points to reach higher levels.
    - Added level 15 to max level option.
    - Level up checks once every hour instead of every 30mins.


---------------------------------------------------------------------------------------------------
Version: 1.5.6
Date: 2021-08-05

  Changes:
    - Added new color to unit_tint for terran unit coloring in map mode.
    - Changed max value for max autonomous group from 50 to 60
    - Changed max value for max group size from 250 to 600
    - Changed max value for attach group threshold from 6000 to 30000

  Bugfixes: