@@ -12,7 +12,7 @@ enemyracemanager-enemy-corpse-time=Enemy Corpse Decompose Time (minute) [img=inf
 enemyracemanager-level-multipliers=Enemy Strength Multiplier [img=info]
 enemyracemanager-max-hitpoint-multipliers=Enemy Max Hit Points Multiplier [img=info]
 enemyracemanager-max-gathering-groups=Max Auto Gathering Groups [img=info]
-enemyracemanager-max-group-size=Max Groups Size [img=info]
+enemyracemanager-max-group-size=Max Group Size [img=info]
 
 enemyracemanager-mapping-method=Enemy Mapping Method [img=info]
 enemyracemanager-2way-group-enemy-orientation=[2 races split] Orientation [img=info]
@@ -34,13 +34,13 @@ enemyracemanager-evolution-point-multipliers=[Level Up] Evolution Point Multipli
 
 enemyracemanager-attack-meter-enable=[Attack Meter] Enable [img=info]
 enemyracemanager-attack-meter-threshold=[Attack Meter] Threshold [img=info]
-enemyracemanager-attack-meter-threshold-deviation=[Attack Meter] Threshold Deviation [img=info]
+enemyracemanager-attack-meter-threshold-deviation=[Attack Meter] Threshold Deviation (%) [img=info]
 enemyracemanager-flying-squad-enable=[Flying Squad] Enable [img=info]
-enemyracemanager-flying-squad-chance=[Flying Squad] Spawn Chance [img=info]
+enemyracemanager-flying-squad-chance=[Flying Squad] Spawn Chance (%) [img=info]
 enemyracemanager-dropship-squad-enable=[Dropship Squad] Enable [img=info]
-enemyracemanager-dropship-squad-chance=[Dropship Squad] Spawn Chance [img=info]
-enemyracemanager-precision-strike-flying-unit-enable=[Precision Strike] Enable for flying squads [img=info]
-enemyracemanager-precision-strike-flying-unit-chance=[Precision Strike] Spawn chance for flying squad [img=info]
+enemyracemanager-dropship-squad-chance=[Dropship Squad] Spawn Chance (%) [img=info]
+enemyracemanager-precision-strike-flying-unit-enable=[Precision Strike] Enable for flying squad [img=info]
+enemyracemanager-precision-strike-flying-unit-chance=[Precision Strike] Spawn chance for flying squad (%) [img=info]
 enemyracemanager-precision-strike-warning=[Precision Strike] Attack Warning [img=info]
 
 
@@ -70,8 +70,8 @@ enemyracemanager-evolution-point-accelerator=Killed Units and turrets are now co
 enemyracemanager-evolution-point-multipliers=This multiplier applies to all values which use to calculate evolution points. \nRange: 0.1 - 10
 
 enemyracemanager-attack-meter-enable=Enable attack meters.  When attack meter reach its threshold, the race will send out an attack group to attack its enemy's military entities.
-enemyracemanager-attack-meter-threshold=Threshold for spawning attack group. \n1 point for each killed unit, 10 points for killed turret and 50 points for killed spawners. \nMixed attack group consumes 20 points each unit. Flying squad consumes 75 points.\nRange: 1000 - 30000
-enemyracemanager-attack-meter-threshold-deviation=Threshold deviation percentage.\nRange: 10 - 25
+enemyracemanager-attack-meter-threshold=Threshold multiplier for spawning attack group. \nFormula: MAX_GROUP_SIZE * THRESHOLD_MULTIPLIER * 20. Default setting is 3000 points.\nMeter gets 1p/killed unit, 10p/killed turret and 50p/killed spawner. \nMixed attack group consumes 20p/unit. Flying squad consumes 75p/unit. Dropship squad consumes 150p/unit\nRange: 1 - 10
+enemyracemanager-attack-meter-threshold-deviation=Threshold deviation percentage.
 enemyracemanager-flying-squad-enable=Enable flying attack group.  They fly straight to their targeted entity.
 enemyracemanager-flying-squad-chance=Flying squad spawn chance.
 enemyracemanager-dropship-squad-enable=Enable Dropship Squad.  They are dedicated groups that fly straight to their target to drop units. They ignore attack distractions. \nThis require flying squad to be enable
